[package]
name = "jpn_holiday_atlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.28", features = ["serde"] }
serde_json = "1.0.105"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2.16"
csv = "1.2.2"
anyhow = "1.0.75"
serde_yaml = "0.9.25"

[dev-dependencies]
pretty_assertions="1.4.0"
